--- a/hb-profiles/Quest Behaviors/MyQuestBehaviors.csproj
+++ b/hb-profiles/Quest Behaviors/MyQuestBehaviors.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DMF_Cannon.cs" />
+    <Compile Include="DMF_Fishing.cs" />
     <Compile Include="DMF_Gnoll.cs" />
     <Compile Include="DMF_Shoot.cs" />
     <Compile Include="DMF_Tonk.cs" />
