--- a/hb-profiles/Quest Behaviors/MyQuestBehaviors.csproj
+++ b/hb-profiles/Quest Behaviors/MyQuestBehaviors.csproj
@@ -34,6 +34,7 @@
     <Reference Include="Honorbuddy">
       <HintPath>..\Honorbuddy.exe</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
