--- a/Quest Behaviors/MyQuestBehaviors.csproj
+++ b/Quest Behaviors/MyQuestBehaviors.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DMF_Shoot.cs" />
     <Compile Include="DMF_Tonk.cs" />
     <Compile Include="DMF_Turtle.cs" />
+    <Compile Include="Fishing.cs" />
     <Compile Include="Ogrila_Wrangle.cs" />
     <Compile Include="Ogrila_Demons.cs" />
     <Compile Include="Ogrila_Bomb.cs" />
