--- a/Quest Behaviors/MyQuestBehaviors.csproj
+++ b/Quest Behaviors/MyQuestBehaviors.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,6 +60,7 @@
     <Compile Include="Ogrila_Demons.cs" />
     <Compile Include="Ogrila_Bomb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepCollector.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
